"""initial schema

Revision ID: b8f0fd385d21
Revises: 
Created: 2026-09-22 15:03:32.447058
"""

from __future__ import annotations

from collections.abc import Sequence

import sqlalchemy as sa
from alembic import op

revision: str = 'b8f0fd385d21'
down_revision: str | None = None
branch_labels: str | Sequence[str] | None = None
depends_on: str | Sequence[str] | None = None


def upgrade() -> None:
    """Apply the change."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('app_secrets',
    sa.Column('name', sa.String(length=64), nullable=False),
    sa.Column('value', sa.String(length=512), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.PrimaryKeyConstraint('name', name=op.f('pk_app_secrets'))
    )
    op.create_table('buildings',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('code', sa.String(length=20), nullable=False),
    sa.Column('name', sa.String(length=200), nullable=False),
    sa.Column('address', sa.String(length=400), nullable=True),
    sa.Column('is_active', sa.Boolean(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.PrimaryKeyConstraint('id', name=op.f('pk_buildings')),
    sa.UniqueConstraint('code', name=op.f('uq_buildings_code'))
    )
    op.create_table('categories',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('name', sa.String(length=100), nullable=False),
    sa.Column('parent_id', sa.UUID(), nullable=True),
    sa.Column('description', sa.String(length=400), nullable=True),
    sa.Column('is_active', sa.Boolean(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.ForeignKeyConstraint(['parent_id'], ['categories.id'], name=op.f('fk_categories_parent_id_categories'), ondelete='RESTRICT'),
    sa.PrimaryKeyConstraint('id', name=op.f('pk_categories')),
    sa.UniqueConstraint('parent_id', 'name', name='uq_categories_parent_id_name')
    )
    op.create_table('users',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('email', sa.String(length=320), nullable=False),
    sa.Column('full_name', sa.String(length=200), nullable=False),
    sa.Column('password_hash', sa.String(length=128), nullable=False),
    sa.Column('role', sa.Enum('Employee', 'Facility Admin', 'Engineer', name='role', native_enum=False, create_constraint=True, length=32), nullable=False),
    sa.Column('is_active', sa.Boolean(), nullable=False),
    sa.Column('sessions_valid_from', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('failed_login_count', sa.Integer(), nullable=False),
    sa.Column('locked_until', sa.DateTime(timezone=True), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.PrimaryKeyConstraint('id', name=op.f('pk_users')),
    sa.UniqueConstraint('email', name=op.f('uq_users_email'))
    )
    op.create_table('engineer_profiles',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('user_id', sa.UUID(), nullable=False),
    sa.Column('specialty', sa.String(length=100), nullable=False),
    sa.Column('max_concurrent_incidents', sa.Integer(), nullable=False),
    sa.Column('is_available', sa.Boolean(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], name=op.f('fk_engineer_profiles_user_id_users'), ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id', name=op.f('pk_engineer_profiles')),
    sa.UniqueConstraint('user_id', name=op.f('uq_engineer_profiles_user_id'))
    )
    op.create_table('floors',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('building_id', sa.UUID(), nullable=False),
    sa.Column('level', sa.Integer(), nullable=False),
    sa.Column('name', sa.String(length=100), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.ForeignKeyConstraint(['building_id'], ['buildings.id'], name=op.f('fk_floors_building_id_buildings'), ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id', name=op.f('pk_floors')),
    sa.UniqueConstraint('building_id', 'level', name='uq_floors_building_id_level')
    )
    op.create_table('refresh_tokens',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('user_id', sa.UUID(), nullable=False),
    sa.Column('token_hash', sa.String(length=128), nullable=False),
    sa.Column('family_id', sa.UUID(), nullable=False),
    sa.Column('issued_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('expires_at', sa.DateTime(timezone=True), nullable=False),
    sa.Column('revoked_at', sa.DateTime(timezone=True), nullable=True),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], name=op.f('fk_refresh_tokens_user_id_users'), ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id', name=op.f('pk_refresh_tokens')),
    sa.UniqueConstraint('token_hash', name=op.f('uq_refresh_tokens_token_hash'))
    )
    op.create_index('ix_refresh_tokens_family_id', 'refresh_tokens', ['family_id'], unique=False)
    op.create_index('ix_refresh_tokens_user_id', 'refresh_tokens', ['user_id'], unique=False)
    op.create_table('seats',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('floor_id', sa.UUID(), nullable=False),
    sa.Column('code', sa.String(length=20), nullable=False),
    sa.Column('label', sa.String(length=100), nullable=True),
    sa.Column('is_active', sa.Boolean(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.ForeignKeyConstraint(['floor_id'], ['floors.id'], name=op.f('fk_seats_floor_id_floors'), ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id', name=op.f('pk_seats')),
    sa.UniqueConstraint('floor_id', 'code', name='uq_seats_floor_id_code')
    )
    op.create_table('incidents',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('title', sa.String(length=200), nullable=False),
    sa.Column('description', sa.Text(), nullable=False),
    sa.Column('status', sa.Enum('Open', 'In Progress', 'Blocked', 'Resolved', 'Closed', name='incidentstatus', native_enum=False, create_constraint=True, length=32), nullable=False),
    sa.Column('priority', sa.Enum('Low', 'Medium', 'High', 'Critical', name='priority', native_enum=False, create_constraint=True, length=32), nullable=False),
    sa.Column('reporter_id', sa.UUID(), nullable=False),
    sa.Column('assignee_id', sa.UUID(), nullable=True),
    sa.Column('category_id', sa.UUID(), nullable=True),
    sa.Column('building_id', sa.UUID(), nullable=False),
    sa.Column('floor_id', sa.UUID(), nullable=True),
    sa.Column('seat_id', sa.UUID(), nullable=True),
    sa.Column('acknowledged_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('assigned_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('resolved_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('closed_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('resolution_note', sa.Text(), nullable=True),
    sa.Column('blocked_reason', sa.Text(), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.ForeignKeyConstraint(['assignee_id'], ['users.id'], name=op.f('fk_incidents_assignee_id_users'), ondelete='SET NULL'),
    sa.ForeignKeyConstraint(['building_id'], ['buildings.id'], name=op.f('fk_incidents_building_id_buildings'), ondelete='RESTRICT'),
    sa.ForeignKeyConstraint(['category_id'], ['categories.id'], name=op.f('fk_incidents_category_id_categories'), ondelete='RESTRICT'),
    sa.ForeignKeyConstraint(['floor_id'], ['floors.id'], name=op.f('fk_incidents_floor_id_floors'), ondelete='SET NULL'),
    sa.ForeignKeyConstraint(['reporter_id'], ['users.id'], name=op.f('fk_incidents_reporter_id_users'), ondelete='RESTRICT'),
    sa.ForeignKeyConstraint(['seat_id'], ['seats.id'], name=op.f('fk_incidents_seat_id_seats'), ondelete='SET NULL'),
    sa.PrimaryKeyConstraint('id', name=op.f('pk_incidents'))
    )
    op.create_index('ix_incidents_assignee_id', 'incidents', ['assignee_id'], unique=False)
    op.create_index('ix_incidents_building_id', 'incidents', ['building_id'], unique=False)
    op.create_index('ix_incidents_reporter_id', 'incidents', ['reporter_id'], unique=False)
    op.create_index('ix_incidents_status_created_at', 'incidents', ['status', 'created_at'], unique=False)
    op.create_table('escalation_requests',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('incident_id', sa.UUID(), nullable=False),
    sa.Column('requested_by_id', sa.UUID(), nullable=False),
    sa.Column('reason', sa.Text(), nullable=False),
    sa.Column('status', sa.Enum('Pending', 'Approved', 'Rejected', name='escalationstatus', native_enum=False, create_constraint=True, length=32), nullable=False),
    sa.Column('decided_by_id', sa.UUID(), nullable=True),
    sa.Column('decided_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('decision_note', sa.Text(), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.ForeignKeyConstraint(['decided_by_id'], ['users.id'], name=op.f('fk_escalation_requests_decided_by_id_users'), ondelete='SET NULL'),
    sa.ForeignKeyConstraint(['incident_id'], ['incidents.id'], name=op.f('fk_escalation_requests_incident_id_incidents'), ondelete='CASCADE'),
    sa.ForeignKeyConstraint(['requested_by_id'], ['users.id'], name=op.f('fk_escalation_requests_requested_by_id_users'), ondelete='RESTRICT'),
    sa.PrimaryKeyConstraint('id', name=op.f('pk_escalation_requests'))
    )
    op.create_index('ix_escalation_requests_incident_id', 'escalation_requests', ['incident_id'], unique=False)
    op.create_table('incident_notes',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('incident_id', sa.UUID(), nullable=False),
    sa.Column('author_id', sa.UUID(), nullable=False),
    sa.Column('body', sa.Text(), nullable=False),
    sa.Column('visibility', sa.Enum('public', 'internal', name='notevisibility', native_enum=False, create_constraint=True, length=32), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.ForeignKeyConstraint(['author_id'], ['users.id'], name=op.f('fk_incident_notes_author_id_users'), ondelete='RESTRICT'),
    sa.ForeignKeyConstraint(['incident_id'], ['incidents.id'], name=op.f('fk_incident_notes_incident_id_incidents'), ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id', name=op.f('pk_incident_notes'))
    )
    op.create_index('ix_incident_notes_incident_id', 'incident_notes', ['incident_id'], unique=False)
    op.create_table('incident_status_history',
    sa.Column('id', sa.UUID(), nullable=False),
    sa.Column('incident_id', sa.UUID(), nullable=False),
    sa.Column('from_status', sa.Enum('Open', 'In Progress', 'Blocked', 'Resolved', 'Closed', name='history_from_status', native_enum=False, create_constraint=True, length=32), nullable=True),
    sa.Column('to_status', sa.Enum('Open', 'In Progress', 'Blocked', 'Resolved', 'Closed', name='history_to_status', native_enum=False, create_constraint=True, length=32), nullable=False),
    sa.Column('actor_id', sa.UUID(), nullable=False),
    sa.Column('note', sa.Text(), nullable=True),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=False),
    sa.ForeignKeyConstraint(['actor_id'], ['users.id'], name=op.f('fk_incident_status_history_actor_id_users'), ondelete='RESTRICT'),
    sa.ForeignKeyConstraint(['incident_id'], ['incidents.id'], name=op.f('fk_incident_status_history_incident_id_incidents'), ondelete='CASCADE'),
    sa.PrimaryKeyConstraint('id', name=op.f('pk_incident_status_history'))
    )
    op.create_index('ix_incident_status_history_incident_id', 'incident_status_history', ['incident_id', 'created_at'], unique=False)
    # ### end Alembic commands ###


def downgrade() -> None:
    """Revert the change."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index('ix_incident_status_history_incident_id', table_name='incident_status_history')
    op.drop_table('incident_status_history')
    op.drop_index('ix_incident_notes_incident_id', table_name='incident_notes')
    op.drop_table('incident_notes')
    op.drop_index('ix_escalation_requests_incident_id', table_name='escalation_requests')
    op.drop_table('escalation_requests')
    op.drop_index('ix_incidents_status_created_at', table_name='incidents')
    op.drop_index('ix_incidents_reporter_id', table_name='incidents')
    op.drop_index('ix_incidents_building_id', table_name='incidents')
    op.drop_index('ix_incidents_assignee_id', table_name='incidents')
    op.drop_table('incidents')
    op.drop_table('seats')
    op.drop_index('ix_refresh_tokens_user_id', table_name='refresh_tokens')
    op.drop_index('ix_refresh_tokens_family_id', table_name='refresh_tokens')
    op.drop_table('refresh_tokens')
    op.drop_table('floors')
    op.drop_table('engineer_profiles')
    op.drop_table('users')
    op.drop_table('categories')
    op.drop_table('buildings')
    op.drop_table('app_secrets')
    # ### end Alembic commands ###
